--- a/docs/style.css
+++ b/docs/style.css
@@ -2,14 +2,22 @@
   opacity: 0.5;
 }
 
-canvas {
-  position: absolute;
-}
-
 .container {
 	display: flex;
 }
 
 .column {
 	width: 50%;
+}
+
+.element-right {
+       margin-left: auto;
+}
+
+canvas {
+  position: absolute;
+}
+
+nav {
+       display: flex;
 }
